<resources>
    <string name="app_name">SplitIt</string>
    <string name="title_friends">Friends</string>
    <string name="title_groups">Groups</string>
    <string name="title_activity">Activity</string>
    <string name="add_friends">Add friends</string>
    <string name="label_add_group">Add a new group</string>
    <string name="label_type_group_name">Type the group name</string>
    <string name="label_submit">Submit</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_request_backup">Do you want to sync your data ?</string>
    <string name="label_no_sync">No</string>
    <string name="label_sync">Yes</string>
    <string name="app_open_first_time">openFirstTime</string>
    <string name="label_add_expense">Add a new expense</string>
    <string name="label_type_expense">Insert amount</string>
    <string name="notif_title_backup_succeed">Backup succeed</string>
    <string name="notif_title_backup_failed">Backup failed</string>
    <string name="notif_message_backup_failed">Failed to sync your data</string>
    <string name="notif_message_backup_succeed">Your data are in sync</string>
    <string name="action_delete_group">Group has been deleted</string>
</resources>
